# traces-workshop

./: .gitignore  pyproject.toml  ruff.toml
gps_traces_workspace/: cartesian_transforms.py  download_request_gps_traces.py  gpx_data_parser.py  gpx_parser.py  process_gps_traces.py  score_based_filtering.py  utils.py
